# familytree

./: .gitignore  Cargo.toml  README.md  axum-deployment.yaml  ingress-path-based.yaml  nuxt-deployment.yaml  nuxt.config.ts  package.json  pnpm-lock.yaml  postgres-deployment.yaml  services-nodeport.yaml
app/components/: EditNode.vue  FamilyTree.vue  LoginForm.vue
app/composables/: useFamilyTree.ts
app/layouts/: default.vue
app/pages/: tree.vue
axum_family/: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
axum_family/config/: development.yaml  production.yaml  server_development.yaml
axum_family/examples/axum_example/: .env
axum_family/examples/axum_example/api/: Cargo.toml
axum_family/examples/axum_example/entity/: Cargo.toml
axum_family/examples/axum_example/pro_admin/: dashboard.toml
axum_family/examples/axum_example/pro_admin/raw_tables/: posts.toml
axum_family/migration/: Cargo.toml
axum_family/migration/bak/: lib.rs
axum_family/migration/src/: lib.rs  m20251204_184527_medlem.rs  m20251206_174904_family_tree.rs
axum_family/pro_admin/: config.toml  dashboard.toml
axum_family/sea-orm-pro/src/: config.rs
axum_family/src/: app.rs  lib.rs
axum_family/src/controllers/: admin.rs  auth.rs  mod.rs  user.rs
axum_family/src/grapher/: graph_creater.rs  mod.rs
axum_family/src/graphql/: query_root.rs
axum_family/src/initializers/: graphql.rs
axum_family/src/models/: family_tree.rs  medlem.rs  mod.rs  user.rs
axum_family/src/models/_entities/: family_tree.rs  medlem.rs  mod.rs  prelude.rs  user.rs
axum_family/src/tasks/: mod.rs  seed.rs  seed_graph.rs  seed_user.rs
build_tools/: scaffold.sh
examples/axum_example/: README.md
examples/axum_example/api/src/: lib.rs
examples/axum_example/migration/: Cargo.toml
examples/axum_example/pro_admin/: config.toml
examples/axum_example/service/: Cargo.toml
k8s/: axum-deployment.yaml  ingress.yaml  nuxt-deployment.yaml  postgres-deployment.yaml
migration/bak/: m20250101_000001_user.rs  m20250101_000002_seed_users.rs
migration/src/: lib.rs  m20250101_000002_seed_users.rs
nuxt_family/: README.md  nuxt.config.ts  package.json
nuxt_family/app/: app.vue
nuxt_family/app/components/: EditNode.vue  FamilyTree.vue
nuxt_family/app/composables/: useEditNode.ts  useFamilyTree.ts
nuxt_family/app/layouts/: default.vue
nuxt_family/app/pages/: index.vue  login.vue  tree.vue
src/: algorithm_ideas.md  app.rs  lib.rs  main.rs
src/controllers/: admin.rs  auth.rs  graphql.rs
src/models/: utils.rs
