[workspace]
members = [".", "migration", "sea-orm-pro"]

[package]
name = "sea-orm-pro-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
migration = { path = "migration" }
sea-orm-pro = { path = "sea-orm-pro", version = "0.1.0" }
sea-orm = { version = "~2.0.0-rc", features = ["runtime-tokio-rustls", "macros", "debug-print"] }
seaography = { version = "~2.0.0-rc", features = ["with-decimal", "with-chrono", "with-uuid", "field-snake-case"] }
loco-rs = { version = "0.16" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
tokio = { version = "1.33.0", default-features = false }
tokio-util = "0.7.11"
async-trait = "0.1.74"
tracing = "0.1.40"
chrono = "0.4"
async-graphql-axum = { version = "7.0" }
tower-service = { version = "0.3" }
axum = { version = "0.8", features = ["multipart"] }
uuid = { version = "1.6.0", features = ["v4"] }
dotenvy = "0.15.7"
base64 = "0.22.1"
csv = "1.3"
encoding_rs = "0.8"
encoding_rs_io = "0.1"

[dev-dependencies]
loco-rs = { version = "0.16", features = ["testing"] }
serial_test = { version = "3.1" }

[features]
default = ["sqlx-sqlite"]
sqlx-mysql = ["sea-orm/sqlx-mysql", "migration/sqlx-mysql"]
sqlx-postgres = ["sea-orm/sqlx-postgres"]
sqlx-sqlite = ["sea-orm/sqlx-sqlite"]

[[bin]]
name = "sea-orm-pro-backend-cli"
path = "src/bin/main.rs"
required-features = []

[patch.crates-io]
sea-orm = { git = "https://github.com/SeaQL/sea-orm", branch = "master" }
sea-orm-migration = { git = "https://github.com/SeaQL/sea-orm", branch = "master" }
seaography = { git = "https://github.com/SeaQL/seaography", branch = "main" }
loco-rs = { git = "https://github.com/SeaQL/loco", branch = "master" }
