[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.6.0", features = ["v4"] }
loco-rs = { version = "0.16" }

[features]
sqlx-mysql = ["sea-orm-migration/sqlx-mysql"]

[dependencies.sea-orm-migration]
version = "~2.0.0-rc"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
]
